--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  dio: ^5.9.1
+  shared_preferences: ^2.5.4
+  cached_network_image: ^3.4.1
+  lottie: ^3.3.2
+  google_fonts: ^8.0.1
 
 dev_dependencies:
   flutter_test:
