feat: implement home screen with BLoC pattern and UI components
- Add home screen with bottom navigation and featured content sections
- Implement BLoC pattern for home data management with repository layer
- Create UI components: banners, categories, activities grid, and search
- Add Dio client for API requests with authentication interceptor
- Update authentication flow to navigate to home screen after login
- Add data models for banners, categories, and activities
- Include currency formatter extension for Indonesian Rupiah

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cached_network_image: ^3.4.1
   lottie: ^3.3.2
   google_fonts: ^8.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
