feat(account): add user profile management and account settings
- Introduce user bloc for managing profile state, events, and API interactions
- Create account page with profile display, menu items, and logout functionality
- Add edit profile page with image upload via image_picker plugin
- Implement change password page with validation and secure update
- Include help center and privacy policy informational pages
- Update API constants for profile-related endpoints
- Configure platform-specific plugins (file_selector) for image handling
- Modify main screen to use account page and integrate user bloc
- Enhance user model with toJson() method for profile updates
- Update home page to display user profile picture

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   lottie: ^3.3.2
   google_fonts: ^8.0.1
   intl: ^0.20.2
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
