--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_fonts: ^8.0.1
   intl: ^0.20.2
   image_picker: ^1.2.1
+  flutter_widget_from_html: ^0.17.1
+  webview_flutter: ^4.13.1
 
 dev_dependencies:
   flutter_test:
