feat: add order history, e-tickets, and direct booking flow
- Add order list page with transaction history and e-ticket viewer
- Implement direct booking bottom sheet in activity detail
- Integrate barcode generation for e-tickets using barcode_widget
- Add payment summary, order summary, and contact detail widgets
- Extend payment bloc to support transaction history and equatable
- Update main screen navigation to include order list page
- Remove unused UI elements (favorites, notifications, bookmark icon)
- Fix transaction creation API call and improve error handling

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^1.2.1
   flutter_widget_from_html: ^0.17.1
   webview_flutter: ^4.13.1
+  barcode_widget: ^2.0.4
+  equatable: ^2.0.8
 
 dev_dependencies:
   flutter_test:
